+ Agregué una lista de Refugios + Agregué el menú

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,5 +80,7 @@ de cualesquiera daños o perjuicios que pudieran causarse por incumplimiento de 
 resolución de cualquier conflicto relativo a su interpretación o aplicación, el Usuario se somete
 expresamente a la jurisdicción de los tribunales de _____________________________ (España).</string>
     <string name="logo">logo</string>
+    <string name="boton_listado">Listado gatitos</string>
+    <string name="boton_Refugios">Listado de Refugios</string>
 
 </resources>
