+ Agregué una imagen al iniciar la aplicación + Agregué icono al toobal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,8 @@ expresamente a la jurisdicción de los tribunales de ___________________________
     <string name="refugio">Refugio</string>
     <string name="pDireccion">Dirección: </string>
     <string name="pRed">Red: </string>
+    <string name="gatitos">Gatitos</string>
+    <string name="refugios">Refugios</string>
 
 
 </resources>
