+ A medida que se van registrando los usuarios, estos se almacenan en la base de datos + Se agrega un lista de la base de datos, entre medio del registro y que te llegue el msj (sólo para ver)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,6 +95,8 @@ expresamente a la jurisdicción de los tribunales de ___________________________
     <string name="pRaza">Raza:</string>
     <string name="pEdad">Edad:</string>
     <string name="pSexo">Sexo:</string>
+    <string name="usuarios">Usuarios</string>
+    <string name="continuar">Continuar</string>
 
 
 </resources>
