--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,9 @@ expresamente a la jurisdicción de los tribunales de ___________________________
     <string name="pRaza">Raza: </string>
     <string name="pFriendly">Friendly: </string>
     <string name="pSexo">Sexo: </string>
+    <string name="pAtencion">Atencion requerida: </string>
+    <string name="pTiraPelo">Tira pelo: </string>
+    <string name="pAmigable">Amigable con animales: </string>
     <string name="usuarios">Usuarios</string>
     <string name="continuar">Continuar</string>
     <string name="ingresecodigoemail">Ingrese el código enviado a su email</string>
